--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -1,17 +1,15 @@
----
-apiVersion: "v1"
-kind: "Service"
+apiVersion: v1
+kind: Service
 metadata:
-  name: "virtual-meeting-backend-dev"
-  namespace: "dev"
+  name: nginx-service  
   labels:
-    app: "virtual-meeting-backend-dev"
+    app: nginx
 spec:
   ports:
-  - protocol: "TCP"
-    port: 3001
-    targetPort: 3001
+  - nodePort: 30500
+    port: 80
+    protocol: TCP
+    targetPort: 80
   selector:
-    app: "virtual-meeting-backend-dev"
-  type: "LoadBalancer"
-  loadBalancerIP: ""
+    app: nginx
+  type: NodePort
