--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,9 +1,9 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx-deployment1
+  name: nginx-deployment
   labels:
-	app: nginx
+	  app: nginx
 spec:
   replicas: 2
   selector:
