--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,25 +1,25 @@
-apiVersion: apps/v1
-kind: Deployment
+apiVersion: "apps/v1"
+kind: "Deployment"
 metadata:
-  name: nginx-deployment1
+  name: "nginx-deployment1"
   labels:
-   app: nginx
+   app: "nginx"
 spec:
-  replicas: 3
+  replicas: 2
   selector:
     matchLabels:
-      app: nginx
+      app: "nginx"
   template:
     metadata:
       labels:
-        app: nginx
+        app: "nginx"
     spec:
       containers:
-      - name: webserver1
-        image: nginx:1.6
+      - name: "webserver1"
+        image: "nginx:1.6"
         ports:
           - containerPort:80
-      - name: database-server
-        image: mysql-3.2
+      - name: "database-server"
+        image: "mysql-3.2"
         ports:
           - containerPort:3306
