--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -17,7 +17,9 @@ spec:
       containers:
       - name: "webserver1"
         image: "nginx:1.6"
-        port: "80"
+        portS:
+          - containerPort:"80"        
       - name: "database-server"
         image: "mysql-3.2"
-        port: "3306"
+        portS:
+          - containerPort: "3306"
