--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: "apps/v1"
 kind: "Deployment"
 metadata:
-  name: "nginx-deployment1"
+  name: "nginx-deployment"
   labels:
    app: "nginx"
 spec:
@@ -15,7 +15,7 @@ spec:
         app: "nginx"
     spec:
       containers:
-      - name: "webserver1"
+      - name: "webserver"
         image: "nginx:1.6"
         ports:
           - containerPort: 80 
