--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -16,10 +16,10 @@ spec:
     spec:
       containers:
       - name: "webserver"
-        image: "nginx:1.6"
+        image: "nginx:latest"
         ports:
           - containerPort: 80 
       - name: "database-server"
-        image: "mysql-3.2"
+        image: "mysql:8.0"
         ports:
           - containerPort: 3306
