--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -2,7 +2,7 @@
 apiVersion: "v1"
 kind: "Service"
 metadata:
-  name: "nginx-service"  
+  name: "nginx-server"  
   labels:
     app: "nginx"
 spec:
